data/raw_logs/syntactic/syn_13.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_13.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_13.c:1:1: error: expected declaration or statement at end of input
    1 | int main() { int x = 10; if (x == 10) { x = 5;
      | ^~~
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_13.c:1:1: error: expected declaration or statement at end of input
